--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "pradeep",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
